syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "StoreGroupOpsProto";

package facade;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

import "routines.proto";
import "facade_common.proto";


import "extra/product_product.proto";
import "types/product_store_group.proto";
import "extra/product_store.proto";

service StoreGroupOperations {
  rpc CreateStoreGroup(CreateStoreGroupParams) returns (domain.ProductStoreGroupData) {}
  rpc UpdateStoreGroup(UpdateStoreGroupParams) returns (domain.ProductStoreGroupData) {}
  rpc GetStoreGroup(BundleGetRequest) returns (domain.ProductStoreGroupData) {}

  
  rpc AddVendorProduct(AddVendorProductParams) returns (routines.Response) {}
  rpc UpdateVendorProduct(UpdateVendorProductParams) returns (routines.Response) {}
  rpc RemoveVendorProduct(RemoveVendorProductParams) returns (routines.Response) {}
  
  rpc AddProductStoreGroupMember(AddProductStoreGroupMemberParams) returns (routines.Response) {}
  rpc UpdateProductStoreGroupMember(UpdateProductStoreGroupMemberParams) returns (routines.Response) {}
  rpc RemoveProductStoreGroupMember(RemoveProductStoreGroupMemberParams) returns (routines.Response) {}
  
  rpc AddProductStoreGroupRole(AddProductStoreGroupRoleParams) returns (routines.Response) {}
  rpc UpdateProductStoreGroupRole(UpdateProductStoreGroupRoleParams) returns (routines.Response) {}
  rpc RemoveProductStoreGroupRole(RemoveProductStoreGroupRoleParams) returns (routines.Response) {}
  

  // -- relations: one --
  rpc ModifyProductStoreGroupType(ModifyProductStoreGroupTypeParams) returns (routines.Response) {}

  // -- extensions --
  

    // -- query --
  rpc QueryAll(BundleHandle) returns (domain.ProductStoreGroupList) {}
  rpc QueryIds(BundleHandle) returns (routines.Strings) {}
  rpc QueryList(BundleQueryMap) returns (domain.ProductStoreGroupList) {}
  rpc QueryOne(BundleQueryMap) returns (domain.ProductStoreGroupData) {}
  rpc Select(BundleHandle) returns (domain.ProductStoreGroupList) {}

  rpc ListProductStoreGroups(BundleListRequest) returns (domain.ProductStoreGroupList) {}
  rpc LoadProductStoreGroups(BundleIdsRequest) returns (domain.ProductStoreGroupList) {}
  rpc StreamProductStoreGroups(BundleListRequest) returns (stream domain.ProductStoreGroupList) {}
  rpc RemoveProductStoreGroup(BundleDeleteRequest) returns (routines.Response) {}
}


// Mutations for main entity

message CreateStoreGroupParams{
  BundleHandle handle = 1;
  domain.ProductStoreGroupData productStoreGroup = 2;
  string comment = 3;
}

message UpdateStoreGroupParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupData productStoreGroup = 3;
  string comment = 4;
}


// Mutations for VendorProduct

message AddVendorProductParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.VendorProductData data = 3;
  string comment = 4;
}

message UpdateVendorProductParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.VendorProductData data = 3;
  string comment = 4;
}

message RemoveVendorProductParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreGroupMember

message AddProductStoreGroupMemberParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupMemberData data = 3;
  string comment = 4;
}

message UpdateProductStoreGroupMemberParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupMemberData data = 3;
  string comment = 4;
}

message RemoveProductStoreGroupMemberParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreGroupRole

message AddProductStoreGroupRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupRoleData data = 3;
  string comment = 4;
}

message UpdateProductStoreGroupRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupRoleData data = 3;
  string comment = 4;
}

message RemoveProductStoreGroupRoleParams{
  BundleHandle handle = 1;
  string main_id = 2;
  string item_id = 3;
  string comment = 4;
}

// Mutations for ProductStoreGroupType

message ModifyProductStoreGroupTypeParams{
  BundleHandle handle = 1;
  string main_id = 2;
  domain.ProductStoreGroupTypeData data = 3;
  string comment = 4;
}

